Added reputation like lists capability

--- a/check_rbl.ini
+++ b/check_rbl.ini
@@ -1,98 +1,37 @@
 [rbl]
 
 cmdfile="/var/spool/icinga/cmd/icinga.cmd"
-;
-; IP based DNS Lists - RBL 
-;
-server=rbl.abuse.ro
-server=dnsbl.ahbl.org
-server=l1.apews.org
-server=bsb.empty.us
-server=bl.nszones.com
-server=all.rbl.jp
-server=dns.rymsho.ru
-server=bl.shlink.org
-server=dnsbl.sorbs.net
-server=backscatter.spameatingmonkey.net
-server=bl.spameatingmonkey.net
-server=netbl.spameatingmonkey.net
-; Includes SBL, SBLCSS, XBL and PBL blocklists.
-server=zen.spamhaus.org
-server=multi.surbl.org
-server=dnsrbl.swinog.ch
-server=blacklist.woody.ch
-server=dnsbl.zapbl.net
-
-server=dnsbl-1.uceprotect.net
-server=dnsbl-2.uceprotect.net
-server=dnsbl-3.uceprotect.net
 
 ;
-; Name based DNS Lists - RHSBL 
-;
-rhserver=uribl.abuse.ro
-rhserver=rhsbl.ahbl.org
-rhserver=l2.apews.org
-rhserver=hbl.atlbl.net
-rhserver=bsb.empty.us
-rhserver=ex.dnsbl.org
-rhserver=dnsbl.othello.ch
-rhserver=ubl.nszones.com
-rhserver=url.rbl.jp
-rhserver=rhsbl.rymsho.ru
-rhserver=rhsbl.shlink.org
-rhserver=rhsbl.sorbs.net
-rhserver=fresh.spameatingmonkey.net
-rhserver=fresh10.spameatingmonkey.net
-rhserver=fresh15.spameatingmonkey.net
-; This zone also includes all of SEM-URI(uribl.spameatingmonkey.net).
-rhserver=urired.spameatingmonkey.net
-rhserver=dbl.spamhaus.org
-rhserver=multi.surbl.org
-rhserver=uribl.swinog.ch
-rhserver=dob.sibl.support-intelligence.net
-rhserver=multi.uribl.com
-rhserver=uri.blacklist.woody.ch
-rhserver=rhsbl.zapbl.net
-rhserver=zebl.zoneedit.com
-rhserver=ban.zebl.zoneedit.com
+; Sources
+;http://multirbl.valli.org/lookup/
+;http://www.blacklistalert.org/
 
 ;
-; Dead lists or special lists
+; For sevvers that always send an answer (like hostkarma.junkemailfilter.com) can write:
+;
+;server=hostkarma.junkemailfilter.com#BL=127.0.0.2,127.0.0.3
+; Server is blacklisted ONLY if ANY answer is in set present after BL
+;
+;server=hostkarma.junkemailfilter.com#WL=127.0.0.2,127.0.0.3
+; Server is blacklisted ONLY if NO answer is in set present after WL
 ;
 
-; No longer maintained: http://www.deadbeef.com/anti-spam/bl-spam-deadbeef-com/
-;server=bl.deadbeef.com
-; Same with empty.us
-;server=bsb.spamlookup.net
-; Under no circumstances should it be used by any MTA for mail filtering: http://www.dnsbl.org/postmasters.php
-;server=in.dnsbl.org
-; Closed: http://rfc-ignorant.org/endofanera.php 
-;server=abuse.rfc-ignorant.org
-;server=bogusmx.rfc-ignorant.org
-;server=dsn.rfc-ignorant.org
-;server=postmaster.rfc-ignorant.org
-; Experimental list. Into production, XS would be included in multi, and this temporary, standalone test list would go away.
-;server=xs.surbl.org
 
-
-
-
-
-
-; original plugin list
-server=cbl.abuseat.org
-server=dnsbl.cyberlogic.net
-server=spamtrap.drbl.drand.net
-server=spamsources.fabel.dk
-server=0spam.fusionzero.com
 server=mail-abuse.blacklist.jippg.org
+server=multi.surbl.org
 server=korea.services.net
+server=dnsrbl.swinog.ch
 server=spamguard.leadmon.net
+server=blacklist.woody.ch
 server=ix.dnsbl.manitu.net
+server=dnsbl.zapbl.net
 server=relays.nether.net
+server=dnsbl-1.uceprotect.net
 server=dnsbl.njabl.org
+server=dnsbl-2.uceprotect.net
 server=bhnc.njabl.org
+server=dnsbl-3.uceprotect.net
 server=no-more-funn.moensted.dk
 server=rbl.orbitrbl.com
 server=psbl.surriel.com
@@ -102,7 +41,6 @@ server=spam.spamrats.com
 server=bl.spamcannibal.org
 server=bl.spamcop.net
 server=ubl.unsubscore.com
-
 server=db.wpbl.info
 server=access.redhawk.org
 server=blacklist.sci.kun.nl
@@ -113,8 +51,244 @@ server=dul.ru
 server=forbidden.icm.edu.pl
 server=hil.habeas.com
 server=rbl.schulte.org
+server=bbm.2ch.net
+server=bbx.2ch.net
+server=niku.2ch.net
+server=combined.abuse.ch
+server=drone.abuse.ch
+server=httpbl.abuse.ch
+server=spam.abuse.ch
+server=rbl.abuse.ro
+server=cbl.abuseat.org
+server=dnsbl.ahbl.org
+server=ircbl.ahbl.org
+server=nospam.ant.pl
+server=dnsbl.anticaptcha.net
+server=cbl.anti-spam.org.cn
+server=cblless.anti-spam.org.cn
+server=cblplus.anti-spam.org.cn
+server=cdl.anti-spam.org.cn
+server=orvedb.aupads.org
+server=rsbl.aupads.org
+server=ips.backscatterer.org
+server=b.barracudacentral.org
+server=bb.barracudacentral.org
+server=l1.bbfh.ext.sorbs.net
+server=l2.bbfh.ext.sorbs.net
+server=l3.bbfh.ext.sorbs.net
+server=l4.bbfh.ext.sorbs.net
+server=list.bbfh.org
+server=relays.bl.kundenserver.de
+server=cidr.bl.mcafee.com
+server=mail-abuse.blacklist.jippg.org
+server=bl.blocklist.de
+server=list.blogspambl.com
+server=dnsbl.burnt-tech.com
+server=rbl.choon.net
+server=bogons.cymru.com
+server=tor.dan.me.uk
+server=torexit.dan.me.uk
+server=intercept.datapacket.net
+server=virbl.dnsbl.bit.nl
+server=lookup.dnsbl.iip.lu
+server=ix.dnsbl.manitu.net
+server=tor.dnsbl.sectoor.de
+server=block.dnsbl.sorbs.net
+server=dul.dnsbl.sorbs.net
+server=escalations.dnsbl.sorbs.net
+server=http.dnsbl.sorbs.net
+server=misc.dnsbl.sorbs.net
+server=problems.dnsbl.sorbs.net
+server=proxies.dnsbl.sorbs.net
+server=relays.dnsbl.sorbs.net
+server=safe.dnsbl.sorbs.net
+server=smtp.dnsbl.sorbs.net
+server=socks.dnsbl.sorbs.net
+server=spam.dnsbl.sorbs.net
+server=web.dnsbl.sorbs.net
+server=zombie.dnsbl.sorbs.net
+server=any.dnsl.ipquery.org
+server=backscat.dnsl.ipquery.org
+server=netblock.dnsl.ipquery.org
+server=relay.dnsl.ipquery.org
+server=single.dnsl.ipquery.org
+server=rbl.dns-servicios.com
+server=vote.drbl.caravan.ru
+server=work.drbl.caravan.ru
+server=vote.drbl.gremlin.ru
+server=work.drbl.gremlin.ru
+server=vote.drbldf.dsbl.ru
+server=work.drbldf.dsbl.ru
+server=dnsbl.dronebl.org
+server=rbl.efnet.org
+server=tor.efnet.org
+server=rbl.efnetrbl.org
+server=bl.emailbasura.org
+server=bsb.empty.us
+server=aspews.ext.sorbs.net
+server=spamsources.fabel.dk
+server=fnrbl.fast.net
+server=rbl.fasthosts.co.uk
+server=v4.fullbogons.cymru.com
+server=0spam.fusionzero.com
+server=0spam-killlist.fusionzero.com
+server=truncate.gbudb.net
+server=hil.habeas.com
+server=forbidden.icm.edu.pl
+server=spamrbl.imp.ch
+server=wormrbl.imp.ch
+server=dnsbl.inps.de
+server=rbl.interserver.net
+server=dnsbl.ipocalypse.net
+server=hostkarma.junkemailfilter.com#BL=127.0.0.2,127.0.0.3
+server=dnsbl.justspam.org
+server=dnsbl.kempt.net
+server=spamguard.leadmon.net
+server=dnsbl.madavi.de
+server=dnsbl.mags.net
+server=bl.mailspike.net
+server=rep.mailspike.net#BL=127.0.0.10,127.0.0.11,127.0.0.12,127.0.0.13,127.0.0.14
+server=z.mailspike.net
+server=no-more-funn.moensted.dk
+server=rbl.mw-internet.net
+server=relays.nether.net
+server=unsure.nether.net
+server=bhnc.njabl.org
+server=combined.njabl.org
+server=dnsbl.njabl.org
+server=bl.nszones.com
+server=dyn.nszones.com
+server=sbl.nszones.com
+server=dnsbl.openresolvers.org
+server=spamlist.or.kr
+server=rbl.orbitrbl.com
+server=netblock.pedantic.org
+server=spam.pedantic.org
+server=rbl.polarcomm.net
+server=dnsbl.proxybl.org
+;server=list.quorum.to
+server=all.rbl.jp
+server=short.rbl.jp
+server=virus.rbl.jp
+server=combined.rbl.msrbl.net
+server=images.rbl.msrbl.net
+server=phishing.rbl.msrbl.net
+server=spam.rbl.msrbl.net
+server=virus.rbl.msrbl.net
+server=web.rbl.msrbl.net
+server=access.redhawk.org
+server=dnsbl.rizon.net
+server=dynip.rothen.com
+server=dul.ru
+server=dnsbl.rv-soft.info
+server=dnsbl.rymsho.ru
+server=all.s5h.net
+server=rbl.schulte.org
+server=blacklist.sci.kun.nl
+server=bl.score.senderscore.com
+server=korea.services.net
+server=bl.shlink.org
+server=dyn.shlink.org
+server=dnsbl.solid.net
+server=dnsbl.sorbs.net
+server=new.spam.dnsbl.sorbs.net
+server=old.spam.dnsbl.sorbs.net
+server=recent.spam.dnsbl.sorbs.net
+server=bl.spamcannibal.org
+server=dnsbl.spam-champuru.livedoor.com
+server=bl.spamcop.net
+server=backscatter.spameatingmonkey.net
+server=badnets.spameatingmonkey.net
+server=bl.spameatingmonkey.net
+server=netbl.spameatingmonkey.net
+server=netblockbl.spamgrouper.com
+server=singlebl.spamgrouper.com
+server=pbl.spamhaus.org
+server=sbl.spamhaus.org
+server=sbl-xbl.spamhaus.org
+server=xbl.spamhaus.org
+server=zen.spamhaus.org
+server=feb.spamlab.com
+server=rbl.spamlab.com
+server=bsb.spamlookup.net
+server=all.spamrats.com
+server=dyna.spamrats.com
+server=noptr.spamrats.com
+server=spam.spamrats.com
+server=multi.surbl.org
+server=xs.surbl.org
+server=srn.surgate.net
+server=psbl.surriel.com
+server=dnsbl.swiftbl.org
+server=dnsrbl.swinog.ch
+server=bl.technovision.dk
+server=st.technovision.dk
+server=bl.tiopan.com
+server=exitnodes.tor.dnsbl.sectoor.de
+server=opm.tornevall.org
+server=spamtrap.trblspam.com
+server=rbl2.triumf.ca
+server=dnsbl-0.uceprotect.net
+server=dnsbl-1.uceprotect.net
+server=dnsbl-2.uceprotect.net
+server=dnsbl-3.uceprotect.net
+server=ubl.unsubscore.com
+server=ip.v4bl.org
+server=dnsbl.webequipped.com
+server=blacklist.woody.ch
+server=db.wpbl.info
+server=dnsbl.zapbl.net
+server=dnsbl.ahbl.org
+server=bsb.empty.us
+server=bl.nszones.com
+server=all.rbl.jp
+server=dns.rymsho.ru
+server=bl.shlink.org
+server=cbl.abuseat.org
+server=dnsbl.sorbs.net
+server=dnsbl.cyberlogic.net
+server=backscatter.spameatingmonkey.net
+server=spamtrap.drbl.drand.net
+server=bl.spameatingmonkey.net
+server=spamsources.fabel.dk
+server=netbl.spameatingmonkey.net
+server=0spam.fusionzero.com
+server=zen.spamhaus.org
+rhserver=rbl.abuse.ro
+rhserver=uribl.abuse.ro
+rhserver=rhsbl.ahbl.org
+rhserver=hbl.atlbl.net
+rhserver=uri.blacklist.woody.ch
+rhserver=ex.dnsbl.org
+rhserver=in.dnsbl.org
+rhserver=bsb.empty.us
+rhserver=hostkarma.junkemailfilter.com
+rhserver=ubl.nszones.com
+rhserver=dnsbl.othello.ch
+rhserver=dyndns.rbl.jp
+rhserver=url.rbl.jp
+rhserver=badconf.rhsbl.sorbs.net
+rhserver=nomail.rhsbl.sorbs.net
+rhserver=rhsbl.rymsho.ru
+rhserver=rhsbl.shlink.org
+rhserver=dob.sibl.support-intelligence.net
+rhserver=rhsbl.sorbs.net
+rhserver=fresh.spameatingmonkey.net
+rhserver=fresh10.spameatingmonkey.net
+rhserver=fresh15.spameatingmonkey.net
+rhserver=uribl.spameatingmonkey.net
+rhserver=urired.spameatingmonkey.net
+rhserver=dbl.spamhaus.org
+rhserver=bsb.spamlookup.net
+rhserver=multi.surbl.org
+rhserver=xs.surbl.org
+rhserver=uribl.swinog.ch
+rhserver=black.uribl.com
+rhserver=grey.uribl.com
+rhserver=multi.uribl.com
+rhserver=red.uribl.com
+rhserver=rhsbl.zapbl.net
+rhserver=ban.zebl.zoneedit.com
+rhserver=zebl.zoneedit.com
 
-; these are rather slow
-;server=bl.csma.biz
-;server=sbl.csma.biz
 
