Added JS check, corrected INI example

--- a/check_site_integrity.ini
+++ b/check_site_integrity.ini
@@ -1,5 +1,5 @@
 
-www.example1.com:ftp_user1:ftp_password1:5
-www.example2.com:ftp_user2:ftp_password2:5
-www.example3.com:ftp_user3:ftp_password3:5
+www.example1.com:ftp_user1:ftp_password1:5:nagioshost:nagiosservice
+www.example2.com:ftp_user2:ftp_password2:5:nagioshost:nagiosservice
+www.example3.com:ftp_user3:ftp_password3:5:nagioshost:nagiosservice
 
