Changed v4bl.org name

--- a/check_rbl.ini
+++ b/check_rbl.ini
@@ -233,7 +233,7 @@ server=dnsbl-1.uceprotect.net
 server=dnsbl-2.uceprotect.net
 server=dnsbl-3.uceprotect.net
 server=ubl.unsubscore.com
-server=ip.v4bl.org
+server=free.v4bl.org
 server=dnsbl.webequipped.com
 server=blacklist.woody.ch
 server=db.wpbl.info
